--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name="com.example.listviewdemo2.OneActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
